--- a/main.html
+++ b/main.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+  <head>
+		<title>Web App Dashboard</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
+		<script src="main.js"></script>
   </body>
 </html>
