--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
   <body>
+		<canvas id="myChart"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
 		<script src="main.js"></script>
   </body>
