normalize.css added

--- a/main.html
+++ b/main.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<title>Web App Dashboard</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/main.css">
+    <title>Web App Dashboard</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
   <body>
-		<canvas id="myChart"></canvas>
+    <header>
+      
+    </header>
+    <main>
+      <canvas id="myChart"></canvas>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
-		<script src="main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
