--- a/main.html
+++ b/main.html
@@ -4,12 +4,18 @@
     <title>Web App Dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
   <body>
     <header>
-      
+      <h1>AppName</h1>
+      <div class="user-profile">
+        <img class="user-avatar" src="images/profile-avatar.jpeg" alt="image of user">
+        <h2>Name of user</h2>
+      </div>
+      <img class="notifications" src="icons/icon-bell.svg" alt="Notification icon">
     </header>
     <main>
       <canvas id="myChart"></canvas>
