--- a/main.html
+++ b/main.html
@@ -10,12 +10,17 @@
 	</head>
   <body>
     <header>
-      <h1>AppName</h1>
-      <div class="user-profile">
-        <img class="user-avatar" src="images/profile-avatar.jpeg" alt="image of user">
-        <h2>Name of user</h2>
-      </div>
-      <img class="notifications" src="icons/icon-bell.svg" alt="Notification icon">
+    	<div class="upper-header">
+				<nav role="navigation">
+					<ul class="active">
+						<li><a href="#"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
+				   <li><a href="#"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
+					 <li><a href="#"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
+					 <li><a href="#"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
+					</ul>
+					<a class="nav-toggle" href="#"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
+				</nav>
+			</div>
     </header>
     <main>
       <canvas id="myChart"></canvas>
