--- a/main.html
+++ b/main.html
@@ -10,17 +10,17 @@
 	</head>
   <body>
     <header>
-    	<div class="upper-header">
-				<nav role="navigation">
-					<ul class="active">
-						<li><a href="#"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
-				   <li><a href="#"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
-					 <li><a href="#"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
-					 <li><a href="#"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
-					</ul>
-					<a class="nav-toggle" href="#"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
-				</nav>
-			</div>
+      <div class="upper-header">
+        <nav role="navigation">
+          <ul class="active" id="menu">
+            <li><a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
+            <li><a href="#members"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
+             <li><a href="#visits"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
+             <li><a href="#settings"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
+            <a class="nav-toggle" href="javascript:void(0);" onclick="menuFunction()"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
+          </ul>
+      </nav>
+    </div>
     </header>
     <main>
       <canvas id="myChart"></canvas>
