--- a/main.html
+++ b/main.html
@@ -10,16 +10,18 @@
 	</head>
   <body>
     <header>
-        <nav role="navigation">
-          <ul class="active" id="menu">
-            <li><a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
-            <li><a href="#members"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
-             <li><a href="#visits"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
-             <li><a href="#settings"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
-            <a class="nav-toggle" href="javascript:void(0);" onclick="menuFunction()"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
-          </ul>
+      <nav role="navigation">
+        <ul class="active" id="menu">
+          <li><a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
+          <li><a href="#members"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
+           <li><a href="#visits"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
+           <li><a href="#settings"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
+          <a class="nav-toggle" href="javascript:void(0);" onclick="menuFunction()"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
+        </ul>
       </nav>
-    </div>
+        <img class="bell-icon" src="icons/icon-bell.svg" width="25px" alt="">
+        <img class="user-profile" src="images/profile-avatar.jpeg" alt="">
+        <h2>User Name</h2>
     </header>
     <main>
       <canvas id="myChart"></canvas>
