added charts to js and canvas to html
issues with sidebar navigation height and donut chart

--- a/main.html
+++ b/main.html
@@ -24,7 +24,11 @@
         <h2>Christopher Carr</h2>
     </header>
     <main>
-      <canvas id="myChart"></canvas>
+			<div class="charts">
+				<canvas id="trafficChart"></canvas>
+				<canvas id="dailyTrafficChart"></canvas>
+				<canvas id="mobileUserChart"></canvas>
+			</div>
       <aside>
         <nav>
           <ul>
