donut chart added issue fixed

--- a/main.html
+++ b/main.html
@@ -24,11 +24,6 @@
         <h2>Christopher Carr</h2>
     </header>
     <main>
-			<div class="charts">
-				<canvas id="trafficChart"></canvas>
-				<canvas id="dailyTrafficChart"></canvas>
-				<canvas id="mobileUserChart"></canvas>
-			</div>
       <aside>
         <nav>
           <ul>
@@ -40,7 +35,14 @@
           </ul>
         </nav>  
       </aside>
+      <div class="charts">
+          <canvas id="trafficChart"></canvas>
+          <canvas id="dailyTrafficChart"></canvas>
+          <canvas id="mobileUserChart"></canvas>
+      </div>
     </main>
+    <footer role="contentinfo">
+    </footer> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
