--- a/main.html
+++ b/main.html
@@ -25,13 +25,12 @@
     </header>
     <main>
       <aside>
-        <nav>
+        <nav role="navigation">
           <ul>
             <li><a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
             <li><a href="#members"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
              <li><a href="#visits"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
              <li><a href="#settings"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
-            <a class="nav-toggle" href="javascript:void(0);" onclick="menuFunction()"><img src="icons/burger-menu-icon.svg" alt="" width="25px"></a>
           </ul>
         </nav>  
       </aside>
