--- a/main.html
+++ b/main.html
@@ -24,16 +24,14 @@
         <h2>Christopher Carr</h2>
     </header>
     <main>
-      <aside>
-        <nav role="navigation">
+        <nav class="side-nav" role="navigation">
           <ul>
             <li><a href="#dashboard"><img src="icons/icon-dashboard.svg" alt="" width="25px"></a></li>
             <li><a href="#members"><img src="icons/icon-members.svg" alt="" width="25px"></a></li>
              <li><a href="#visits"><img src="icons/icon-visits.svg" alt="" width="25px"></a></li>
              <li><a href="#settings"><img src="icons/icon-settings.svg" alt="" width="25px"></a></li>
           </ul>
-        </nav>  
-      </aside>
+        </nav>
       <div class="charts">
           <canvas id="trafficChart"></canvas>
           <canvas id="dailyTrafficChart"></canvas>
